# AI_Data_Cleaning_Agent

./: Readme.md  pyproject.toml  requirements.txt
app/: app.py
data/: sample_data.csv  sample_data.xlsx
others/: test.py
scripts/: ai_agent.py  backend.py  data_cleaning.py  data_ingestion.py  main.py  test_postgres_connection.py
