[project]
name = "ai-data-cleaning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "euriai>=1.0.32",
    "fastapi==0.109.2",
    "great-expectations==0.17.22",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "numpy==1.26.2",
    "openpyxl==3.1.2",
    "pandas==2.1.3",
    "psycopg2>=2.9.10",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "sqlalchemy==2.0.25",
    "streamlit==1.30.0",
    "uvicorn==0.27.0",
]
